Build rework for release. Split examples out into separate project.